--- a/firebase.json
+++ b/firebase.json
@@ -21,6 +21,11 @@
     "singleProjectMode": true,
     "hosting": {
       "port": 5000
+    },
+    "apphosting": {
+      "port": 5002,
+      "rootDirectory": "./",
+      "startCommand": "npm run dev"
     }
   },
   "firestore": {
